@@ -1,5 +1,13 @@
 2016-01-13  Edward Jones  <ed.jones@embecosm.com>
 
+	* include/mageec/ML.h: Remove iterative training interfaces.
+	* include/mageec/ML/C5.h: Likewise.
+	* include/mageec/ML/FileML.h: Likewise.
+	* lib/ML/C5.cpp: Likewise.
+	* lib/ML/FileML.cpp: Likewise.
+
+2016-01-13  Edward Jones  <ed.jones@embecosm.com>
+
 	* include/mageec/Types.h (TypeID ID): Define integer types that
 	mageec enumerations and IDs are based on.
 	* lib/Database.cpp: Use mageec::ID where appropriate to improve
